trunk/Archive2/d7/6c1723c1882c47/output
main.cpp: In function ‘std::ostream& operator<<(std::ostream&, const CSide&)’:
main.cpp:19:9: error: duplicate case value
         case CSide::ASK:
         ^
main.cpp:17:9: error: previously used here
         case CSide::SELL:
         ^
